Adicionando arquivos com a estrutura reorganizada

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>English Game</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
     <div class="body-all">
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -21,6 +22,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -35,6 +37,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -49,6 +52,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -63,6 +67,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -77,6 +82,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -91,6 +97,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -105,6 +112,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -119,6 +127,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -133,6 +142,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -147,6 +157,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -161,6 +172,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -175,6 +187,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -189,6 +202,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -203,6 +217,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -217,6 +232,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -231,6 +247,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -245,6 +262,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -259,6 +277,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -273,6 +292,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -287,6 +307,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -301,6 +322,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -315,6 +337,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -329,6 +352,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -343,6 +367,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -357,6 +382,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -371,6 +397,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -385,6 +412,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -399,6 +427,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
@@ -413,6 +442,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
